Adding REST requests for offices
